--- a/projects/personal_assistant/personal_assistant.ipynb
+++ b/projects/personal_assistant/personal_assistant.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Hamisu! welcome to personal assistant.\n",
-      "The current date and time is 2024-11-24 16:53:50.759693\n",
-      "Here's your motivational quote: Success is not the key to happiness. Happiness is the key to success.\n",
+      "Hello Nazir! welcome to personal assistant.\n",
+      "The current date and time is 2024-12-01 16:17:28.154121\n",
+      "Here's your motivational quote: Don't watch the clock; do what it does. Keep going.\n",
       "\n",
       "=== Personal Assistant Menu ===\n",
       "1. Get Weather\n",
@@ -19,65 +19,20 @@
       "3. Show Reminders\n",
       "4. Tell Me a Joke\n",
       "5. Simple Calculator\n",
-      "6. Exit\n",
-      "Invalid choice. Please try again.\n",
-      "\n",
-      "=== Personal Assistant Menu ===\n",
-      "1. Get Weather\n",
-      "2. Add Reminder\n",
-      "3. Show Reminders\n",
-      "4. Tell Me a Joke\n",
-      "5. Simple Calculator\n",
-      "6. Exit\n",
-      "Invalid choice. Please try again.\n",
-      "\n",
-      "=== Personal Assistant Menu ===\n",
-      "1. Get Weather\n",
-      "2. Add Reminder\n",
-      "3. Show Reminders\n",
-      "4. Tell Me a Joke\n",
-      "5. Simple Calculator\n",
-      "6. Exit\n",
-      "Sorry, I couldn't fetch the weather. Please check the city name or your connection.\n",
-      "\n",
-      "=== Personal Assistant Menu ===\n",
-      "1. Get Weather\n",
-      "2. Add Reminder\n",
-      "3. Show Reminders\n",
-      "4. Tell Me a Joke\n",
-      "5. Simple Calculator\n",
-      "6. Exit\n",
-      "Invalid choice. Please try again.\n",
-      "\n",
-      "=== Personal Assistant Menu ===\n",
-      "1. Get Weather\n",
-      "2. Add Reminder\n",
-      "3. Show Reminders\n",
-      "4. Tell Me a Joke\n",
-      "5. Simple Calculator\n",
-      "6. Exit\n",
-      "Simple Calculator\n",
-      "The result is: 325.0\n",
-      "\n",
-      "=== Personal Assistant Menu ===\n",
-      "1. Get Weather\n",
-      "2. Add Reminder\n",
-      "3. Show Reminders\n",
-      "4. Tell Me a Joke\n",
-      "5. Simple Calculator\n",
-      "6. Exit\n",
-      "\n",
-      "Here's a joke: I hate double standards. Burn a body at a crematorium, you're \"being a respectful friend.\" Do it at home and you're \"destroying evidence.\"\n",
-      "\n",
-      "\n",
-      "=== Personal Assistant Menu ===\n",
-      "1. Get Weather\n",
-      "2. Add Reminder\n",
-      "3. Show Reminders\n",
-      "4. Tell Me a Joke\n",
-      "5. Simple Calculator\n",
-      "6. Exit\n",
-      "Goodbye!\n"
+      "6. Exit\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'reminder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 132\u001b[0m\n\u001b[1;32m    129\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid choice. Please try again.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    131\u001b[0m \u001b[38;5;66;03m# Start the assistant\u001b[39;00m\n\u001b[0;32m--> 132\u001b[0m \u001b[43mpersonal_assistant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    134\u001b[0m sys\u001b[38;5;241m.\u001b[39mstdout\u001b[38;5;241m.\u001b[39mflush()\n",
+      "Cell \u001b[0;32mIn[1], line 118\u001b[0m, in \u001b[0;36mpersonal_assistant\u001b[0;34m()\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m choice \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    117\u001b[0m     reminder \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter your reminder: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 118\u001b[0m     \u001b[43msave_reminder\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    119\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m choice \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    120\u001b[0m     show_reminders()\n",
+      "Cell \u001b[0;32mIn[1], line 25\u001b[0m, in \u001b[0;36msave_reminder\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_reminder\u001b[39m():\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreminders.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m---> 25\u001b[0m         file\u001b[38;5;241m.\u001b[39mwrite(\u001b[43mreminder\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYour reminder has been saved.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reminder' is not defined"
      ]
     }
    ],
@@ -87,6 +42,8 @@
     "from datetime import datetime\n",
     "import requests\n",
     "\n",
+    "\n",
+    "# weather function \n",
     "def get_weather(city):\n",
     "    api_key = \"a73fbebc441e170a6a21dd2c2c82efae\"  #API key\n",
     "    url = f\"http://api.openweathermap.org/data/2.5/weather?q={city}&appid={api_key}&units=metric\"\n",
@@ -130,7 +87,7 @@
     "        else:\n",
     "            print(f\"Here's a joke: {joke_data['setup']}\\n{joke_data['delivery']}\")\n",
     "    else:\n",
-    "        print(\"Sorry, I couldn't fetch a joke right now.\")\n",
+    "        print(\"Sorry, a joke couldn't to be found right now.\")\n",
     "\n",
     "\n",
     "# Let the user perform basic calculations (addition, subtraction, multiplication, division).\n",
@@ -168,6 +125,7 @@
     "\n",
     "    # Create a list of quotes.\n",
     "    # Use the random module to pick and display one quote.\n",
+    "    \n",
     "    quotes = [\n",
     "        \"Believe you can and you're halfway there.\",\n",
     "        \"The only way to do great work is to love what you do.\",\n",
@@ -179,6 +137,7 @@
     "    # choose the quote and display it for the user\n",
     "    quote_of_the_day = random.choice(quotes)\n",
     "    print(f\"Here's your motivational quote: {quote_of_the_day}\")\n",
+    "\n",
     "\n",
     "    while True:\n",
     "        print(\"\\n=== Personal Assistant Menu ===\")\n",
@@ -213,6 +172,8 @@
     "\n",
     "sys.stdout.flush()\n",
     "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -233,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -247,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
